@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.5.4" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.5.5" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="script.module.tulip" version="2.2.4" />
@@ -19,6 +19,11 @@
 		<platform>all</platform>
 		<language>el</language>
 		<news>
+[B]1.5.5[/B]
+- Log exception on failure when downloading a subtitle
+- Log queries for debugging purposes
+- Rename subtitle in order to mitigate illegal chars for filesystems that struggle with them
+
 [B]1.5.3 - 1.5.4[/B]
 - Improved subtitle search for tv shows
 - Improved handling of subtitles choice on multisubs archives
